<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/ic_educator_image"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/cover_image" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="emailAddress" />
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password" />
        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login" />
        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="16dp"
                android:text="@string/options"
                android:textSize="11sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".2dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@id/text_other"
                android:background="@color/purple_700"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".2dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/text_other"
                android:background="@color/purple_700"
                />
        </RelativeLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>